Use text vs. type a bit more carefully

--- a/pagelayout.tex
+++ b/pagelayout.tex
@@ -15,8 +15,8 @@ Franklin Mark Liang,
 \url{http://www.tug.org/docs/liang/}}
 this produces some of the best paragraph layouts available.
 
-But sometimes we don't want to justify our text.
-If would like it to be ``flush left''
+But sometimes we don't want our text justified.
+If you would like it to be ``flush left''
 with a ragged right side, place it in a \texttt{flushleft} environment
 or add \verb|\raggedright| to the current group.
 To center it, place it in a
