--- a/textformatting.tex
+++ b/textformatting.tex
@@ -56,7 +56,7 @@ should usually be preferred over the second
 (which affect the group in which they are issued),
 since the former automatically handle any
 spacing corrections needed around them.\punckern\footnote{For example,
-\textit{italicized text} amidst upright text should be followed
+\textit{italic type} amidst upright type should be followed
 by a slight amount of extra space, called an ``italic correction''\quotekern.}
 However, there are cases where the second variety is the only option:
 \begin{enumerate}
@@ -126,7 +126,7 @@ Shown below are some common terms:
 \begin{centerfigure}
 \includegraphics[keepaspectratio,width=0.65\textwidth]{heights.png}
 
-\captionof{figure}{Text sits on the \introduce{baseline},
+\captionof{figure}{Type sits on the \introduce{baseline},
 rises to the \introduce{ascender height},
 and drops to the \introduce{descender height}.
 The \introduce{cap height} refers to the size of uppercase letters,
