Pronunciation on page 1

--- a/why.tex
+++ b/why.tex
@@ -43,7 +43,8 @@ JULY 1969, A.~D.
 \end{center}
 
 If you care about more than \emph{what} you tell your readers, but \emph{how}
-you tell it, you should try \LaTeX.
+you tell it, you should try \LaTeX.\punckern\footnote{Pronounced ``lay-tech''
+or ``lah-tech''}
 It's a program\footnote{And a markup language,
 and (sort of) a programming language, and a bit of a cult.
 But that's all for later.}
