History: bump noto weight up to medium
This better matches the weight of Garamond Premier's caption size.

--- a/history.tex
+++ b/history.tex
@@ -44,7 +44,7 @@ digital typesetting system.
 When the dust settled in 1978, Knuth had the first version of
 \TeX.\punckern\footnote{\TeX{} is pronounced like the first syllable of
 ``\textbf{tech}nician''\quotekern. It is from the Greek
-{\fontspec[Scale=MatchLowercase]{NotoSerif-Regular}τέχνη},
+{\fontspec[Scale=MatchLowercase]{NotoSerif-Medium}τέχνη},
 for \introduce{art} or \introduce{craft}.\endnote{Knuth,
 \textit{The \TeX book}, 1}}
 
