History: Tweak footnotes

--- a/history.tex
+++ b/history.tex
@@ -33,9 +33,9 @@ letters and shapes were built from tiny dots,
 often packed together at over 1,000 per inch.
 Inspired by this burgeoning tech and frustrated with the current state of affairs,
 Knuth set off on one of the greatest yak shaves\footnote{Programmers
-often refer to seemingly unrelated tasks needed to solve their main problem
-as ``yak shaving''\quotekern. The phrase is thought to originate from an episode
-of \textit{The Ren~\&~Stimpy Show}.\endnote{``yak shaving''\quotekern,
+call seemingly unrelated work needed to solve their main problem
+``yak shaving''\quotekern. The phrase is thought to originate from an episode
+of \textit{The Ren~\&~Stimpy Show}.\punckern\endnote{``yak shaving''\quotekern,
 \textit{The Jargon File},
 \url{http://www.catb.org/~esr/jargon/html/Y/yak-shaving.html}}}
 of all time.
@@ -45,7 +45,7 @@ When the dust settled in 1978, Knuth had the first version of
 \TeX.\punckern\footnote{\TeX{} is pronounced like the first syllable of
 ``\textbf{tech}nician''\quotekern. It is from the Greek
 {\fontspec[Scale=MatchLowercase]{NotoSerif-Medium}τέχνη},
-for \introduce{art} or \introduce{craft}.\endnote{Knuth,
+for \introduce{art} or \introduce{craft}.\punckern\endnote{Knuth,
 \textit{The \TeX book}, 1}}
 
 It's hard to appreciate how much of a revolution \TeX{} was,
