Tweak AAT mention

--- a/fonts.tex
+++ b/fonts.tex
@@ -11,8 +11,8 @@ including type. It remains in use today.} fonts was added.
 Today, \LuaLaTeX{} and \XeLaTeX{} offer support for the two formats you're
 likely to encounter on your computer:
 TrueType and OpenType.\punckern\footnote{Mac versions of \LaTeX{} also support
-Apple's \acronym{aat}, but we'll limit ourselves here to a discussion of
-the more ubiquitous formats.}
+Apple's \acronym{aat}, but let's limit this discussion to
+more ubiquitous formats.}
 
 \begin{description}
 \item[TrueType] was developed by Apple and Microsoft in the late 1980s.
