Moon plaque: Cite never use Futura, change lead-in
Hopefully this makes it appear less like a typo where I forgot to
complete the previous sentence. It's still a bit clunky, though.

--- a/why.tex
+++ b/why.tex
@@ -33,8 +33,12 @@ Why do you think that might be?
 \begin{leftfigure}
 \fontspec{FuturaCon-ExtBol}\Large DO IT LATER
 \end{leftfigure}
-seems oddly reminiscent of a certain shoe company's advertising,
-or how
+seems oddly reminiscent of a certain shoe company's advertising.
+It is, in part,\punckern\endnote{Douglas Thomas,
+``Over the Moon for Futura''\quotekern,
+\textit{Never Use Futura}
+(New York, 2017)}
+how
 \begin{center}
 \fontspec[Ligatures=TeX, Scale=MatchLowercase]{Futura-Med}
 MEN FROM THE PLANET EARTH \\
