Minor copyright page tweak

--- a/latex-book.tex
+++ b/latex-book.tex
@@ -291,8 +291,8 @@ Matt Kline
 Some crappy draft, typeset \today.
 \vspace*{0.5in}
 
-The author apologizes for any typos, misattributions, or other flubs,
-and welcomes you to point them out on this book's Github
+The author apologizes for any typos, misattributions, and other flubs.
+He welcomes you to point them out on this book's Github
 repository at \\
 \url{https://github.com/mrkline/latex-book}, or via email to \\
 \texttt{matt <at> bitbashing.io}
