--- a/installation.tex
+++ b/installation.tex
@@ -9,7 +9,7 @@ which comes with:
     but we're getting to that.}
 \item A common set of \LaTeX{} \introduce{packages}.
     Packages are pieces of code that can be placed in your documents to
-    do all sorts of things, like add new commands or change their style.
+    do all sorts of things, like change their style or add new commands.
     We'll see lots of them in action throughout this book.
 \item Miscellaneous tools, such as editors.
 \end{enumerate}
@@ -21,8 +21,8 @@ Each major operating system has its own \LaTeX{} distribution:
 \item[Windows] has Mik\TeX.
     Install it from \url{https://miktex.org/download}
     as described by the tutorial.
-    Mik\TeX{} offers the unique ability to automatically find and download
-    additional packages if your document uses one that isn't currently
+    Mik\TeX{} offers the unique ability to automatically download
+    additional packages if your document uses one that it can't find
     on your computer.
 
 \item[Linux and BSD] use \TeX{} Live.
