--- a/micro.tex
+++ b/micro.tex
@@ -64,7 +64,7 @@ Of course, you can use package options to change this limit,
 or disable the feature entirely.}
 
 Note that this feature isn't currently available with \XeLaTeX{}.
-You'll need to use \LuaLaTeX{} if you want to take advantage of it.
+You'll need to use \LuaLaTeX{} to take advantage of it.
 
 \section{What next?}
 
