--- a/troubleshooting.tex
+++ b/troubleshooting.tex
@@ -40,7 +40,7 @@ contents of several pages,
 so \TeX{} simply chooses each page break as best it can, by a process of
 `local' rather than `global' optimization.\quotekern''\,\endnote{Knuth,
 \textit{The \TeX book}, 110}}
-You increase the ``penalty'' for doing so in order to make \LaTeX{}
+You can increase the ``penalty'' for doing so in order to make \LaTeX{}
 try harder to avoid it\footnote{When considering a given layout,
 \LaTeX{} assigns penalties, or ``badness''\quotekern,
 to anything that arguably makes a document look worse.
