--- a/latex-book.tex
+++ b/latex-book.tex
@@ -264,6 +264,10 @@
 % See http://tex.stackexchange.com/a/52855/92465
 \emergencystretch=1em
 
+% Do as I say, not as I do.
+\widowpenalty=10000
+\clubpenalty=10000
+
 \begin{document}
 \fontsize{10bp}{13bp}\selectfont
 
@@ -294,11 +298,14 @@ Some crappy draft, typeset \today.
 The author apologizes for any typos, misattributions, and other flubs.
 He welcomes you to point them out on this book's Github
 repository at \\
-\url{https://github.com/mrkline/latex-book}, or via email to \\
+\url{https://github.com/mrkline/latex-book} \\
+Questions, comments, concerns, and diatribes relating to this book 
+can also be sent to \\
 \texttt{matt <at> bitbashing.io}
 
 The author does not have a checking account with the Bank of San Serriffe,
-but will happily purchase a beverage of your choice the next time we meet.
+but will happily compensate your feedback with a beverage of your choice the
+next time we meet.
 
 \vspace*{0.5in}
 {\addfontfeature{Numbers={Proportional,Uppercase}}
