--- a/textformatting.tex
+++ b/textformatting.tex
@@ -32,8 +32,7 @@ so too much is distracting.
 
 \section{Meeting the whole (type) family}
 
-Italics, boldface, and small caps are just a few of the many styles
-available to you.
+The styles shown above are just a few of the many available to you.
 A (mostly) complete list follows:
 \begin{leftfigure}
 \lm
@@ -138,7 +137,7 @@ and the \introduce{x-height} refers to the size of lowercase letters.}
 If the previous commands aren't enough, you can create custom sizes with
 \verb|\fontsize|, which takes both the desired point size and the
 distance between baselines.
-\verb|\fontsize| must be followed with \verb|\selectfont| to take effect.
+This must be followed \verb|\selectfont| to take effect.
 For example, \verb|\fontsize{30pt}{30pt}\selectfont|
 gives:
 \begin{leftfigure}
