--- a/why.tex
+++ b/why.tex
@@ -46,24 +46,24 @@ FIRST SET FOOT UPON THE MOON \\
 JULY 1969, A.~D.
 \end{center}
 
-If you care about more than \emph{what} you tell your readers, but \emph{how}
-you tell it, you should try \LaTeX.\punckern\footnote{Pronounced ``lay-tech''
+If you care not only about \emph{what} you tell your readers, but also \emph{how}
+you tell them, you should try \LaTeX.\punckern\footnote{Pronounced ``lay-tech''
 or ``lah-tech''}
 It's a program\footnote{And a markup language,
-and (sort of) a programming language, and a bit of a cult.
-But that's all for later.}
+and (sort of) a programming language.
+More on that later.}
 for crafting written documents, like papers, presentations,
 or even the book you're reading right now.
-And unless you want to give Adobe large sums
+And unless you give Adobe large sums
 of money for InDesign or InCopy,
-you won't find any better typesetting software.
+you won't find better typesetting software.
 By carefully handling subtle details,
-\LaTeX{} provides high-quality layout
+\LaTeX{} provides high-quality layouts
 with relatively little effort from you, the author.
 Modern versions can also take advantage of new\footnote{By new,
 I mean ``from the mid-1990s''\quotekern, but web browsers and desktop publishing
 software are only just starting to catch up.} advances in computer typography,
-giving you the same tools used by professional designers and publishers.
+offering you the same tools used by professional designers and publishers.
 
 \section{\texorpdfstring{\LaTeX}{LaTeX}?}
 \LaTeX{} is an alternative to ``word processors'' like
@@ -118,18 +118,18 @@ However, it comes with a few advantages:
     how hard is it to fix?%\footnote{I spent far too much of my childhood
     %fighting with Word about how it wrapped text around images.}
 
-\item You can define your own rules, then tweak them to immediately change
+\item You can define your own rules, then tweak them to instantly change
     everywhere they're used in your document.
-    For example, the \verb|\introduce| and \verb|\acronym| commands you saw above
+    For instance, the \verb|\introduce| and \verb|\acronym| commands you saw above
     are my own creations. The former \introduce{italicizes} text, and
     the latter sets words in \acronym{small caps} with a bit of extra
     \,\textsc{\addfontfeature{LetterSpace=15}letterspacing}\, so the characters
     don't look \textsc{too crowded}.
-    If I wake up tomorrow and decide to introduce new terms
+    If tomorrow I decide to introduce new terms
     \textbf{\itshape with this look} and set acronyms
-    {\small\addfontfeature{LetterSpace=8} LIKE THIS},
-    I just change the two lines that define those commands
-    to update every place in the book that uses them.
+    {\small\addfontfeature{LetterSpace=6} LIKE THIS},
+    I just change the two lines that define those commands,
+    and every place in the book that uses them is immediately updated.
 
 \clearpage
 \item Since the document source is plain text,
@@ -147,7 +147,7 @@ However, it comes with a few advantages:
 \section{Another guide?}
 
 One might wonder why the world needs another \LaTeX{} guide.
-After all, it's been out for more than 30 years.
+After all, it's been out for decades.
 A quick Amazon search finds nearly a dozen books on the topic.
 There are plenty of great resources online.
 
@@ -155,7 +155,7 @@ Unfortunately, most guides have two fatal flaws: they are long,
 and they are old.
 The first is anathema to newcomers---if somebody asks about \LaTeX{},
 throwing a 200+ page book at them isn't an encouraging start.
-The second matters because of how much the world of computer typesetting has
+The second matters because of how much the world of typesetting has
 changed since 1986.
 
 When \LaTeX{} was first released that year, none of the publishing technologies
@@ -184,4 +184,6 @@ This book will:
     to create professional-quality documents.
 \item End promptly thereafter.
 \end{enumerate}
-Let's begin.
+\vspace{\baselineskip}
+
+\noindent Let's begin.
