--- a/hello.tex
+++ b/hello.tex
@@ -12,18 +12,18 @@ Hello, World!
 \end{document}
 \end{lstlisting}
 \end{leftfigure}
-Next, we run this file through \LaTeX{} (the program)\footnote{Not to be
+Next, we'll run this file through \LaTeX{} (the program)\footnote{Not to be
 confused with \LaTeX{} the lunchbox, \LaTeX{} the breakfast cereal,
 or \LaTeX{} the flamethrower. The kids love this stuff!}
 to get our document.
-The installation places several different versions---or
+The installation placed several different versions---or
 \introduce{engines}---on your machine,
 but for this entire book, we'll always use \LuaLaTeX{} or \XeLaTeX.
 These are the newest engines available---see Appendix~\ref{history} for an
 explanation of how they differ from the others.
 
-If you are using a \LaTeX{}-specific editor, it may contain a drop-down menu
-or some other configuration to select the engine you'd like to use,
+If you are using a \LaTeX{}-specific editor, it probably contains a drop-down
+menu or some other configuration to select the engine you'd like to use,
 as well as a button to generate your document.
 Otherwise, from a terminal,\punckern\footnote{How to work a terminal emulator,
 making sure the newly-installed \LaTeX{} programs are in your \texttt{PATH},
