--- a/punctuation.tex
+++ b/punctuation.tex
@@ -46,7 +46,7 @@ hyphens (\,-\,), en dashes (\,--\,),
 em dashes (\,---\,), and minus signs (\,$-$\,)
 serve different purposes:
 \begin{description}
-\item[Hyphens] have a few uses:\endnote{Butterick,
+\item[Hyphens] have a few uses:\endnote{Matthew Butterick,
     ``Hyphens and dashes''\quotekern,
     \textit{Practical Typography},
     \url{https://practicaltypography.com/hyphens-and-dashes.html}}
