Read through, backwards, to Math
Pick up there next time.

--- a/back.tex
+++ b/back.tex
@@ -26,9 +26,8 @@ The Share\LaTeX{} knowledge base, at \url{https://www.sharelatex.com/learn}
 
 \section{For typography}
 
-We've spent most of our time here focusing on questions of \emph{what}
-you can do with \LaTeX,
-and little on \emph{how} you should use it to create quality typography.
+We've spent most of our time here focusing \emph{what} you can do with \LaTeX,
+and little on \emph{how} you should use it to create well-designed documents.
 Read on:
 
 \begin{adjustwidth}{1.5em}{0pt}
