--- a/micro.tex
+++ b/micro.tex
@@ -19,7 +19,7 @@ R Schlicht,
 (v2.7a, January 14, 2018), 4}
 \end{quote}
 
-In \LaTeX{}, microtypography is enabled and controlled via the
+In \LaTeX{}, microtypography is enabled and controlled with the
 \texttt{microtype} package.
 Its use is automatic---for the vast majority of documents, you should add
 \begin{leftfigure}
@@ -36,8 +36,8 @@ By default, \LaTeX{} justifies lines between perfectly straight
 left and right margins.
 This is the obvious choice,
 but falls victim to an annoying optical illusion:
-lines ending in small punctuation---like a period or a
-comma---seem shorter than lines that
+lines ending in small punctuation---like periods or
+commas---seem shorter than lines that
 don't.\punckern\footnote{Many other optical illusions come up in typography.
 For example, if a circle, a square, and a triangle
 of equal heights are placed next to each other,
@@ -46,7 +46,7 @@ For this reason, round or pointed characters (like O and A) must
 be made slightly taller than ``flat'' ones (such as H and T) for all
 to appear the same height.\punckern\endnote{%
 Jost Hochuli, \textit{Detail in typography} (Éditions~B42, 2015), 18--19}}
-\texttt{microtype} \introduce{protrudes} punctuation and other smaller
+\texttt{microtype} \introduce{protrudes} punctuation and other
 characters into the margins to compensate.
 
 \section{Font expansion}
