--- a/fonts.tex
+++ b/fonts.tex
@@ -1,14 +1,14 @@
 \chapter{Fonts}
 \label{fonts}
 
-Digital typography has changed almost entirely in the past thirty years.
+Digital fonts have changed almost entirely in the past thirty years.
 Originally, \LaTeX{} used \MF,
 a system designed by Donald Knuth specifically for \TeX{}.
 As time went on, support for PostScript\footnote{One of
 Adobe's original claims to fame,
 PostScript is a language for defining and drawing computer graphics,
 including type. It remains in use today.} fonts was added.
-Today, \LuaLaTeX{} and \XeLaTeX{} offer support for the formats you're
+Today, \LuaLaTeX{} and \XeLaTeX{} support the formats you're
 most likely to encounter on your computer:
 TrueType and OpenType.\punckern\footnote{Mac versions of \LaTeX{} also support
 Apple's \acronym{aat}, but let's limit this discussion to
@@ -21,8 +21,8 @@ more ubiquitous formats.}
     TrueType files generally end in a \monobox{.ttf} extension.
 \item[OpenType] was first released in 1996 by Microsoft and Adobe.
     One major improvement over TrueType is its ability to embed
-    multiple versions of glyphs in a single font file.
-    We'll see this feature in action throughout much of this chapter.
+    multiple versions of glyphs in a single font file---we'll
+    see this feature in action throughout much of this chapter.
     OpenType files generally end in an \monobox{.otf} extension.
 \end{description}
 
@@ -31,8 +31,8 @@ more ubiquitous formats.}
 By default, \LuaLaTeX{} and \XeLaTeX{} use Latin Modern,
 an OpenType rendition of \LaTeX's original type family, Computer Modern.
 While these are high-quality fonts,
-you may want to use others for your documents.
-For this, we turn to the \texttt{fontspec} package:
+they're probably not the only ones you ever want to use.
+For others, we turn to the \texttt{fontspec} package:
 \begin{leftfigure}
 \begin{lstlisting}
 \documentclass{article}
@@ -58,9 +58,9 @@ open-source typefaces are freely available at
 \fontspec[Ligatures=TeX]{Source Sans Pro} Let's try sans serif! \\
 \fontspec{Source Code Pro} Let's try monospaced!
 \end{leftfigure}
-The \verb|Ligatures=TeX| option allows you to use the standard punctuation
-shortcuts mentioned in \chapref{punctuation} (e.g., creating en dashes with
-\texttt{--} or curly quotes with \texttt{``}) instead of having
+The \verb|Ligatures=TeX| option enables the standard punctuation
+shortcuts discussed in \chapref{punctuation} (e.g., creating en dashes with
+\texttt{--} or curly quotes with \texttt{``}) instead of forcing you
 to type the the corresponding characters, which probably aren't on your keyboard.
 You often don't want these for monospaced type, though,
 since the text you set in it---such as code---is usually meant to be displayed
@@ -95,7 +95,7 @@ for example, come in
 {\fontspec[Scale=MatchLowercase]{Futura-ExtBol}extra bold}.
 Sometimes
 {\fontspec[Scale=MatchLowercase]{FuturaSc-Boo}\textsc{small caps}}
-are stored as separate files as well.\punckern\footnote{OpenType allows
+are stored in separate files as well.\punckern\footnote{OpenType allows
 small caps to be placed in the same file(s) as the other glyphs.
 If your font supports this, you don't need to do anything---\texttt{fontspec}
 will dutifully switch to them whenever you use
@@ -147,8 +147,8 @@ Note that instead of typing out \monobox{Futura-Boo},
 \section{Scaling}
 
 Using different typefaces to create a cohesive experience is tricky,
-especially since---as mentioned in \chapref{formatting}---different typefaces
-might look completely different at the same point size.
+especially since typefaces might look completely different
+at the same point size.
 \texttt{fontspec} can help a bit here by scaling fonts to match either the
 x-height or the cap height of your main font with
 \verb|Scale=MatchLowercase| or \verb|Scale=MatchUppercase|,
@@ -162,7 +162,7 @@ used carefully, can produce amazing results.}
 As mentioned above, one of OpenType's defining features is the ability to store
 multiple variations of a typeface's glyphs in a single file and allow users
 to switch between them.
-All of these features are specified as optional arguments to
+These \introduce{font features} are enabled with optional arguments to
 \verb|\setmainfont| and friends.
 They can also be set for the current group with
 \verb|\addfontfeature|.
