--- a/hello.tex
+++ b/hello.tex
@@ -76,7 +76,8 @@ Let's cover some more basics.
 \section{Spacing}
 
 \LaTeX{} generally handles inter-word spacing for you, regardless of how many
-spaces\footnote{Or tabs} you type. For example,
+times you hit the space bar\punckern\footnote{Or the tab key}
+For example,
 \begin{leftfigure}
 \begin{lstlisting}
 The number  of   spaces    between words doesn't   matter. The same
