--- a/installation.tex
+++ b/installation.tex
@@ -47,7 +47,7 @@ Each major operating system has its own \LaTeX{} distribution:
 so you're free to create them with the usual choices of Vim, Emacs, Gedit,
 Sublime, Notepad\plusplus, and so on.\punckern\footnote{If you have never used
 any of these, you owe it to yourself to try a few.
-They're very popular among programmers and other folks who shuffle text around
+They're popular among programmers and other folks who shuffle text around
 screens all day. Just don't use Notepad. Life is too short.}
 However, there are also editors designed specifically for \LaTeX{},
 which often come with their own built-in \acronym{pdf} viewer.
