--- a/why.tex
+++ b/why.tex
@@ -4,7 +4,7 @@
 Modern life is a constant battle for your time,
 fought by endless hordes of ads, apps, clips, emails, sites, shows, and texts.
 To put ideas into the world amidst this din,
-nothing is more important than seizing
+nothing matters more than seizing
 your audience's attention.
 And when we write, we don't just reach readers with our words.
 We grab them with \introduce{typography}: how those words appear.
@@ -54,7 +54,7 @@ of money for InDesign or InCopy,
 you won't find better typesetting software.
 By carefully handling subtle details,
 \LaTeX{} provides high-quality layouts
-with relatively little effort from you, the author.
+with little effort from you, the author.
 Modern versions can also take advantage of new\footnote{By new,
 I mean ``from the mid-1990s''\quotekern, but web browsers and desktop publishing
 software are only just starting to catch up.} advances in computer typography,
@@ -63,11 +63,12 @@ offering you the same tools used by professional designers and publishers.
 \section{\texorpdfstring{\LaTeX}{LaTeX}?}
 \LaTeX{} is an alternative to ``word processors'' like
 Microsoft Word, Apple Pages, Google Docs, and LibreOffice Writer.
-Unlike these other applications, which work on the principle of
+These other applications work on the principle of
 \introduce{What You See Is What You Get} \acronym{(wysiwyg)},
-a \LaTeX{} document is written as a ``plain'' text file,
-using \introduce{markup} to specify how things should look.
-\LaTeX{} then builds your document from this source file,
+where what's on screen is the same as what comes out of your printer.
+\LaTeX{} is different. Here, documents are written as ``plain''
+text files, using \introduce{markup} to specify how they should look.
+\LaTeX{} then builds your documents from these source files,
 based on the formatting rules you give it.
 If you've done any web development, this is a similar process---just
 as \acronym{html} and \acronym{css} describe the page you want
@@ -78,11 +79,12 @@ document to \LaTeX.
 \begin{lstlisting}
 \LaTeX{} is an alternative to ``word processors'' like
 Microsoft Word, Apple Pages, Google Docs, and LibreOffice Writer.
-Unlike these other applications, which work on the principle of
+These other applications work on the principle of
 \introduce{What You See Is What You Get} \acronym{(wysiwyg)},
-a \LaTeX{} document is written as a ``plain'' text file,
-using \introduce{markup} to specify how things should look.
-\LaTeX{} then builds your document from this source file,
+where what's on screen is the same as what comes out of your printer.
+\LaTeX{} is different. Here, documents are written as ``plain''
+text files, using \introduce{markup} to specify how they should look.
+\LaTeX{} then builds your documents from these source files,
 based on the formatting rules you give it.
 If you've done any web development, this is a similar process---just
 as \acronym{html} and \acronym{css} describe the page you want
@@ -91,7 +93,7 @@ document to \LaTeX.
 \end{lstlisting}
 \captionof{figure}{The \LaTeX{} markup for the above paragraph}
 \end{leftfigure}
-\vfill
+\vspace{0.5\baselineskip}
 
 This might seem alien to you if you've never worked with a markup system before.
 However, it comes with a few advantages:
@@ -126,7 +128,6 @@ However, it comes with a few advantages:
     I just change the two lines that define those commands,
     and every place in the book that uses them is immediately updated.
 
-\clearpage
 \item Since the document source is plain text,
     \begin{itemize}
     \item It can be read and understood with any text editor.
@@ -141,7 +142,7 @@ However, it comes with a few advantages:
 
 \section{Another guide?}
 
-One might wonder why the world needs another \LaTeX{} guide.
+You might wonder why the world needs another \LaTeX{} guide.
 After all, it's been out for decades.
 A quick Amazon search finds nearly a dozen books on the topic.
 There are plenty of great resources online.
@@ -156,8 +157,8 @@ changed since 1986.
 When \LaTeX{} was first released that year, none of the publishing technologies
 we use today existed.
 Adobe wouldn't debut their Portable Document Format for another seven years.
-Digital typography was a new field, and desktop publishing was \emph{just}
-getting off the ground.\punckern\endnote{\textit{Graphic Means:
+Digital printing was a new field, and desktop publishing was a fledgling
+curiosity.\punckern\endnote{\textit{Graphic Means:
 A History of Graphic Design Production}, directed by Briar Levit (2017)}
 This shows---badly---in most \LaTeX{} guides.
 If you look for instructions to change your document's font,
@@ -173,9 +174,9 @@ After all, you're a smart, resourceful individual who knows how to use a search
 engine.
 This book will:
 \begin{enumerate}
-\item Teach you the very basics of using \LaTeX.
+\item Teach you the fundamentals of \LaTeX.
 \item Point you to places where you can learn more.
-\item Show you how to use modern technologies like OpenType and microtypography
+\item Show you how to use modern technologies, like OpenType and microtypography,
     to create professional-quality documents.
 \item End promptly thereafter.
 \end{enumerate}
