Text formatting: Fix typo

--- a/textformatting.tex
+++ b/textformatting.tex
@@ -137,8 +137,9 @@ and the \introduce{x-height} refers to the size of lowercase letters.}
 If the previous commands aren't enough, you can create custom sizes with
 \verb|\fontsize|, which takes both the desired point size and the
 distance between baselines.
-This must be followed \verb|\selectfont| to take effect.
-For example, \verb|\fontsize{30pt}{30pt}\selectfont|
+This must be followed with \verb|\selectfont| to take effect.
+For example, \texttt{\textbackslash fontsize\{30pt\}\allowbreak\{30pt\}%
+\allowbreak\textbackslash selectfont}
 gives:
 \begin{leftfigure}
 \lm
