Add \http and \https

--- a/back.tex
+++ b/back.tex
@@ -13,14 +13,14 @@ been discussed.
 Use some of these resources to fill in the gaps:
 
 \begin{adjustwidth}{1.5em}{0pt}
-The \LaTeX{} Wikibook, at \url{https://en.wikibooks.org/wiki/LaTeX}
+The \LaTeX{} Wikibook, at \https{en.wikibooks.org/wiki/LaTeX}
 
-The \TeX{} Stack Exchange, at \url{https://tex.stackexchange.com/}
+The \TeX{} Stack Exchange, at \https{tex.stackexchange.com/}
 
 \textit{The Not So Short Introduction to \LaTeX}, \\
-available at \url{https://www.ctan.org/tex-archive/info/lshort/english/}
+available at \https{www.ctan.org/tex-archive/info/lshort/english/}
 
-The Share\LaTeX{} knowledge base, at \url{https://www.sharelatex.com/learn}
+The Share\LaTeX{} knowledge base, at \https{www.sharelatex.com/learn}
 
 \end{adjustwidth}
 
@@ -32,7 +32,7 @@ Read on:
 
 \begin{adjustwidth}{1.5em}{0pt}
 \textit{Practical Typography}, by Matthew Butterick. \\
-Available (for free!) at \url{https://practicaltypography.com}
+Available (for free!) at \https{practicaltypography.com}
 
 \textit{Stop Stealing Sheep \& Find Out How Type Works}, by Erik Spiekermann
 
@@ -100,5 +100,5 @@ free alternative to Times Roman seen on page \pageref{typography}---are from
 the digital type foundry of Grupa Użytkowników Systemu \TeX{},
 the Polish \TeX{} Users' Group.
 An overview of their excellent work can be found at the following locations:\\
-\url{http://www.gust.org.pl/projects/e-foundry/latin-modern} \\
-\url{http://www.gust.org.pl/projects/e-foundry/tex-gyre}.
+\http{www.gust.org.pl/projects/e-foundry/latin-modern} \\
+\http{www.gust.org.pl/projects/e-foundry/tex-gyre}.
