--- a/fonts.tex
+++ b/fonts.tex
@@ -52,7 +52,7 @@ Hello, Source type family! Neat---no? \\
 should produce something like\footnote{Assuming, of course,
 that you have Adobe's open-source fonts installed.\punckern\endnote{Adobe's
 open-source typefaces are freely available at
-\url{https://github.com/adobe-fonts}}}
+\https{github.com/adobe-fonts}}}
 \begin{leftfigure}
 \fontspec[Ligatures=TeX]{Source Serif Pro} Hello, Source type family! Neat---no? \\
 \fontspec[Ligatures=TeX]{Source Sans Pro} Let's try sans serif! \\
