--- a/history.tex
+++ b/history.tex
@@ -68,9 +68,9 @@ Perhaps most importantly, Knuth and his students designed algorithms
 to automatically hyphenate and justify text into
 beautifully-typeset paragraphs.\punckern\footnote{These same algorithms went
 on to influence the ones Adobe uses in its software today.\punckern\endnote{%
-Several sources (\url{http://www.tug.org/whatis.html},
-\url{https://tug.org/interviews/thanh.html},
-\url{http://www.typophile.com/node/34620})
+Several sources (\http{www.tug.org/whatis.html},
+\https{tug.org/interviews/thanh.html},
+\http{www.typophile.com/node/34620})
 mention \TeX's influence on the \textit{hz}-program by Peter Karow
 and Hermann Zapf, thanks to via Knuth's collaborations with Zapf.
 \textit{hz} was later acquired by Adobe and used
@@ -121,7 +121,7 @@ The most recent version, 3.14159265, came out in January~2014.
     exposing an interface for package and document authors.
     It first appeared in 2007 and is developed by a core team of
     Hans Hagen, Hartmut Henkel, Taco Hoekwater,
-    and Luigi Scarso.\punckern\endnote{\url{http://www.luatex.org}}
+    and Luigi Scarso.\punckern\endnote{\http{www.luatex.org}}
 \end{description}
 
 Building \TeX{} today is an\ldots{} interesting endeavor.
@@ -149,5 +149,5 @@ the \LuaTeX{} authors hand-translated Knuth's Pascal into C
 and have been using the resulting code since 2009.\punckern\endnote{%
 Taco Hoekwater, \textit{\LuaTeX{} says goodbye to Pascal}
 (MAPS 39, Euro\TeX{} 2009),
-\url{https://www.tug.org/TUGboat/tb30-3/tb96hoekwater-pascal.pdf}}
+\https{www.tug.org/TUGboat/tb30-3/tb96hoekwater-pascal.pdf}}
 
