--- a/international.tex
+++ b/international.tex
@@ -100,7 +100,7 @@ Dexter cried,
     However, it is newer and has a few known bugs.
     \texttt{babel} is a fine substitute if you run into trouble.}
     %as I did in
-    %\LuaLaTeX{} (see \url{https://github.com/reutenauer/polyglossia/issues/68}),
+    %\LuaLaTeX{} (see \https{github.com/reutenauer/polyglossia/issues/68}),
 \item Try typesetting Japanese or Chinese with the \texttt{xeCJK} or
     \monobox{luatex-ja} packages.
 \end{itemize}
