--- a/punctuation.tex
+++ b/punctuation.tex
@@ -49,7 +49,7 @@ serve different purposes:
 \item[Hyphens] have a few uses:\endnote{Matthew Butterick,
     ``Hyphens and dashes''\quotekern,
     \textit{Practical Typography},
-    \url{https://practicaltypography.com/hyphens-and-dashes.html}}
+    \https{practicaltypography.com/hyphens-and-dashes.html}}
     \begin{itemize}[leftmargin=*]
     \item They allow a word to be split between the end of one line and the
         start of the next.
