--- a/structure.tex
+++ b/structure.tex
@@ -71,7 +71,7 @@ is built on top of---the latter is a framework of commands for the former.
 The long version is at the back of this book as Appendix~\ref{history}.
 We won't discuss how to use plain \TeX{} here. That's for another book---the
 \TeX book.}
-at \url{https://ctan.org}.
+at \https{ctan.org}.
 The manuals for packages are also found there,
 so it should be your first stop when learning how to use one.
 
