--- a/why.tex
+++ b/why.tex
@@ -13,7 +13,7 @@ It draws readers in,
 informs their expectations, and builds a subliminal brand for your
 work.\punckern\endnote{Erik Spiekermann, ``Type is Visible Language''
 (presented at Beyond Tellerrand, Düsseldorf, Germany, May 19--21, 2014),
-\url{https://www.youtube.com/watch?v=ggQpDu63kk0}}
+\https{www.youtube.com/watch?v=ggQpDu63kk0}}
 \begin{leftfigure}
 \fontspec{TeX Gyre Termes}\fontsize{12pt}{24pt}\selectfont\raggedright
 Typography is why this evokes the terrible essays
